Alterando labels do input

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
         <section class="informacoes">
 
-            <label for="nota1" class="descricao_nota">Nota 1:</label>
+            <label for="nota1" class="descricao_nota">Nota do 1° bimestre:</label>
             <input type="number" id="nota1" class="input_nota">
 
-            <label for="nota2" class="descricao_nota">Nota 2:</label>
+            <label for="nota2" class="descricao_nota">Nota do 2° bimestre:</label>
             <input type="number" id="nota2" class="input_nota">
 
-            <label for="nota3" class="descricao_nota">Nota 3:</label>
+            <label for="nota3" class="descricao_nota">Nota do 3° bimestre:</label>
             <input type="number" id="nota3" class="input_nota">
 
-            <label for="nota4" class="descricao_nota">Nota 4:</label>
+            <label for="nota4" class="descricao_nota">Nota do 4° bimestre:</label>
             <input type="number" id="nota4" class="input_nota">
 
             <input type="submit" onclick="CalculoDaMedia()" value="Realizar cálculo" class="input_enviar"> 
