Adicionando evento da tecla enter ao botão

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="nota4" class="descricao_nota">Nota do 4° bimestre:</label>
             <input type="number" id="nota4" class="input_nota">
 
-            <input type="submit" onclick="CalculoDaMedia()" value="Realizar cálculo" class="input_enviar"> 
+            <input type="submit" onclick="CalculoDaMedia()" value="Realizar cálculo" class="input_enviar" id="input_enviar"> 
         </section>
 
         <section class="resultado" id="resultado">
