--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
             <p class="descricao">Insira suas notas de cada bimestre para saber qual sua média! </p>
         </section>
 
-        <section class="informacoes">
+        <section >
+            <form class="informacoes">
+                <label for="nota1" class="descricao_nota">Nota do 1° bimestre:</label>
+                <input type="number" id="nota1" class="input_nota" required="required">
 
-            <label for="nota1" class="descricao_nota">Nota do 1° bimestre:</label>
-            <input type="number" id="nota1" class="input_nota">
+                <label for="nota2" class="descricao_nota">Nota do 2° bimestre:</label>
+                <input type="number" id="nota2" class="input_nota" required="required">
 
-            <label for="nota2" class="descricao_nota">Nota do 2° bimestre:</label>
-            <input type="number" id="nota2" class="input_nota">
+                <label for="nota3" class="descricao_nota">Nota do 3° bimestre:</label>
+                <input type="number" id="nota3" class="input_nota" required="required">
 
-            <label for="nota3" class="descricao_nota">Nota do 3° bimestre:</label>
-            <input type="number" id="nota3" class="input_nota">
+                <label for="nota4" class="descricao_nota">Nota do 4° bimestre:</label>
+                <input type="number" id="nota4" class="input_nota" required="required">
 
-            <label for="nota4" class="descricao_nota">Nota do 4° bimestre:</label>
-            <input type="number" id="nota4" class="input_nota">
-
-            <input type="submit" onclick="CalculoDaMedia()" value="Realizar cálculo" class="input_enviar" id="input_enviar"> 
+                <input type="submit" onclick="CalculoDaMedia();return false" class="input_enviar" id="input_enviar" value="Realizar cálculo">
+            </form> 
         </section>
 
         <section class="resultado" id="resultado">
