Adicionando mensagem de alerta e refatorando o código

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <article class="frase_resultado">
                 <h2></h2>
             </article>
+
+            <article class="frase_resultado_erro" id="frase_resultado_erro">
+                <h2></h2>
+            </article>
         </section>
     </main>
 
